implement delete bundle function
