# restapi/handlers/bundle.go
@@ -1,6 +1,8 @@
 package handlers
 
 import (
+	"strings"
+
 	"github.com/go-openapi/runtime/middleware"
 
 	"github.com/node-real/greenfield-bundle-service/database"
@@ -9,6 +11,67 @@ import (
 	"github.com/node-real/greenfield-bundle-service/types"
 	"github.com/node-real/greenfield-bundle-service/util"
 )
+
+func IsObjectNotFoundError(err error) bool {
+	return strings.Contains(err.Error(), "No such object")
+}
+
+// HandleDeleteBundle handles delete bundle request
+func HandleDeleteBundle() func(params bundle.DeleteBundleParams) middleware.Responder {
+	return func(params bundle.DeleteBundleParams) middleware.Responder {
+		signerAddress, err := types.VerifySignature(params.HTTPRequest)
+		if err != nil {
+			return bundle.NewCreateBundleBadRequest().WithPayload(types.ErrorInvalidSignature)
+		}
+
+		// check expiry timestamp
+		if err := types.ValidateExpiryTimestamp(params.HTTPRequest); err != nil {
+			return bundle.NewCreateBundleBadRequest().WithPayload(types.ErrorInvalidExpiryTimestamp)
+		}
+
+		// check existence and status of the bundle
+		queriedBundle, err := service.BundleSvc.QueryBundle(params.XBundleBucketName, params.XBundleName)
+		if err != nil {
+			util.Logger.Errorf("query bundle error, bucket=%s, bundle=%s, err=%s", params.XBundleBucketName, params.XBundleName, err.Error())
+			return bundle.NewDeleteBundleBadRequest().WithPayload(types.InternalErrorWithError(err))
+		}
+		if queriedBundle == nil {
+			return bundle.NewDeleteBundleBadRequest().WithPayload(types.ErrorBundleNotExist)
+		}
+		if queriedBundle.Status != database.BundleStatusCreatedOnChain {
+			return bundle.NewDeleteBundleBadRequest().WithPayload(types.ErrorInvalidBundleStatus)
+		}
+
+		// check if the signer is the owner of the bundle
+		bucketInfo, err := service.BundleSvc.QueryBucketFromGndf(params.XBundleBucketName)
+		if err != nil {
+			util.Logger.Errorf("query bucket error, err=%s", err.Error())
+			return bundle.NewCreateBundleBadRequest().WithPayload(types.ErrorInternalError)
+		}
+		if bucketInfo.Owner != signerAddress.String() {
+			util.Logger.Errorf("signer is not the owner of the bucket, signer=%s, bucket=%s", signerAddress.String(), params.XBundleBucketName)
+			return bundle.NewCreateBundleBadRequest().WithPayload(types.ErrorInvalidSignature)
+		}
+
+		// check the existence of the bundle in gnfd
+		_, err = service.BundleSvc.HeadObjectFromGnfd(params.XBundleBucketName, params.XBundleName)
+		if err == nil {
+			return bundle.NewCreateBundleBadRequest().WithPayload(types.ErrorObjectExist)
+		}
+		if !IsObjectNotFoundError(err) {
+			return bundle.NewCreateBundleBadRequest().WithPayload(types.InternalErrorWithError(err))
+		}
+
+		// delete bundle
+		err = service.BundleSvc.DeleteBundle(params.XBundleBucketName, params.XBundleName)
+		if err != nil {
+			util.Logger.Errorf("delete bundle error, bucket=%s, bundle=%s, err=%s", params.XBundleBucketName, params.XBundleName, err.Error())
+			return bundle.NewDeleteBundleBadRequest().WithPayload(types.InternalErrorWithError(err))
+		}
+
+		return bundle.NewDeleteBundleOK()
+	}
+}
 
 // HandleCreateBundle handles create bundle request
 func HandleCreateBundle() func(params bundle.CreateBundleParams) middleware.Responder {
@@ -34,6 +97,12 @@ func HandleCreateBundle() func(params bundle.CreateBundleParams) middleware.Resp
 		if bucketInfo.Owner != signerAddress.String() {
 			util.Logger.Errorf("signer is not the owner of the bucket, signer=%s, bucket=%s", signerAddress.String(), params.XBundleBucketName)
 			return bundle.NewCreateBundleBadRequest().WithPayload(types.ErrorInvalidSignature)
+		}
+
+		// check bundle name prefix
+		if strings.HasPrefix(params.XBundleName, service.BundleNamePrefix) {
+			util.Logger.Errorf("bundle name should not start with %s", service.BundleNamePrefix)
+			return bundle.NewCreateBundleBadRequest().WithPayload(types.ErrorInvalidBundleName)
 		}
 
 		// todo: validate bundle params
